welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:10: error: not found: value doite
		doite();avance();
                ^